# Predix-backend

./: .env.example  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: deploy.yml
anchor-client-sdk/: Cargo.toml
anchor-client-sdk/idls/: predix_program.json
anchor-client-sdk/src/: lib.rs  utils.rs
api/: .env.example  .gitignore  Cargo.toml
api/idls/: predix_program.json
api/src/: app.rs  main.rs  state.rs
api/src/auth/: auth.rs  claims.rs  middleware.rs  mod.rs  privy.rs  require_admin.rs
api/src/engine/: engine.rs
api/src/handlers/: admin.rs  delegate.rs  market.rs  mod.rs  orderbook.rs  orders.rs  snapshot.rs
api/src/models/: admin.rs  auth.rs  delegate.rs  market.rs  mod.rs  orderbook.rs  orders.rs
api/src/routes/: admin.rs  markets.rs  mod.rs  orderbook.rs  orders.rs
api/src/state/: state.rs
api/src/utils/: mod.rs  s3.rs  solana.rs
db/: Cargo.toml
db/migrations/: 20251121171350_init.sql
db/src/: lib.rs
db/src/models/: close_order.rs  market.rs  mod.rs  user.rs
db/src/queries/: market.rs  mod.rs  order.rs  user.rs
db/src/utils/: fetch_metadata.rs  mod.rs
event-listener/: .env.example  .gitignore  Cargo.toml
event-listener/src/: main.rs  types.rs
matching/: Cargo.toml
matching/src/: lib.rs  types.rs
matching/src/orderbook/: market.rs  mod.rs  orderbook.rs
