[workspace]
resolver = "3"
members = ["api", "db", "matching"]

[workspace.dependencies]
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version = "1.18.1", features = ["v4", "serde"]}
serde = {version = "1.0.228", features = ["derive"]}
dotenvy = "0.15.7"
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"]}
rust_decimal = "1.39.0"
chrono = "0.4.42"
