[workspace]
resolver = "3"
members = [ "anchor-client-sdk","api", "db", "event-listener", "matching"]

[workspace.dependencies]
tokio = {version = "1.48.0", features = ["full"]}
uuid = {version = "1.18.1", features = ["v4", "serde"]}
serde = {version = "1.0.228", features = ["derive"]}
dotenvy = "0.15.7"
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid", "chrono"]}
rust_decimal = "1.39.0"
chrono = {version = "0.4.42", features = ["serde"]}
anchor-client = {version = "0.32.1", features = ["async"]}
anchor-lang = "0.32.1"
spl-token = "6.0.0"
solana-client = "2.1.4"
solana-sdk = "2.1.4"
spl-associated-token-account = "6.0.0"
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = "1.3.3"
