[package]
name = "anchor-client-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
solana-sdk.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
base64.workspace = true
bincode.workspace = true
