[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
matching = {path = "../matching"}
rust_decimal = "1.39.0"
uuid = {version = "1.18.1", features = ["v4", "serde"]}
serde = {version = "1.0.228", features = ["derive"]}
privy-rs = "0.1.0-alpha.4"
dotenvy = "0.15.7"
tower-http = {version = "0.6.6", features = ["cors"]}
tower-cookies = "0.11.0"
jsonwebtoken = "9.3.1"
serde_json = "1.0.145"
spl-token = "9.0.0"
solana-client = "3.1.1"
solana-sdk = "3.0.0"
base64 = "0.22.1"
bincode = "1.3.3"

