[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
matching = {path = "../matching"}
rust_decimal.workspace = true
privy-rs = "0.1.0-alpha.4"
tower-http = {version = "0.6.6", features = ["cors"]}
jsonwebtoken = "9.3.1"
spl-token = "9.0.0"
solana-client = "3.1.1"
solana-sdk = "3.0.0"
base64 = "0.22.1"
bincode = "1.3.3"

