[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.6", features = ["macros"]}
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
anyhow.workspace = true
spl-token.workspace = true
solana-client.workspace = true
solana-sdk.workspace = true
anchor-client.workspace = true
anchor-lang.workspace = true
spl-associated-token-account.workspace = true
base64.workspace = true
bincode.workspace = true
chrono.workspace = true
sqlx.workspace = true
matching = {path = "../matching"}
anchor-client-sdk = {path = "../anchor-client-sdk"}
db = {path = "../db"}
rust_decimal.workspace = true
privy-rs = "0.1.0-alpha.4"
tower-http = {version = "0.6.6", features = ["cors"]}
jsonwebtoken = "9.3.1"
aws-sdk-s3 = { version = "1.116.0", features = ["behavior-version-latest"]}
aws-config = {version = "1.8.11", features = ["behavior-version-latest"]}
aws-smithy-http = "0.62.5"



