[package]
name = "event-listener"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
solana-client.workspace = true
anchor-lang.workspace = true
dotenvy.workspace = true
anyhow.workspace = true
solana-sdk.workspace = true
base64.workspace = true
anchor-client-sdk = {path = "../anchor-client-sdk"}
tokio-stream = "0.1.17"
solana-program = "3.0.0"